# kumaneko-web-scraping

./: .gitignore  README.md  create_calender_event.ipynb  kumaneko_check_lottery_result.ipynb  kumaneko_check_reserve.ipynb  kumaneko_make_reserve.ipynb  kumaneko_web_scraping.ipynb  pyproject.toml  reservation_make_list.xlsx  reservation_manage_sheet_python.xlsx
check_reservation/: Local State
check_reservation/10002536/: Local State
check_reservation/10002536/Default/: Cookies  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  (+2 more)
check_reservation/10008847/: Local State
check_reservation/Default/: Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
check_reservation/GrShaderCache/: data_0  data_1  f_000001  index
check_reservation/GraphiteDawnCache/: data_1  index
check_reservation/ShaderCache/: data_0  data_1  data_2  index
check_reservation/segmentation_platform/: ukm_db
debug-profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
debug-profile/Default/: Cookies  DIPS  DIPS-wal  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Shortcuts  Top Sites  TransportSecurity  Web Data
debug-profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  index
debug-profile/GraphiteDawnCache/: data_1  index
debug-profile/ShaderCache/: data_0  data_1  data_2  index
debug-profile/segmentation_platform/: ukm_db
scripts/: read_reservation_excel.py
(+287 files in other folders)
