[project]
name = "kumaneko-web-scraping"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.47.0",
    "google-auth-oauthlib>=1.2.4",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-storage>=3.8.0",
    "gspread>=6.2.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
]
